Update: Added a monstera image, fixed issue with spacing on plant info card

--- a/index.css
+++ b/index.css
@@ -526,3 +526,7 @@ p.toxicity-container {
   padding-top: 0;
   font-size: 17px;
 }
+
+ul {
+  padding-right: 10px;
+}
